2006-03-31 Mikhail Khodjaiants
	Throw OperationCanceledException instead of IOException when getGDBprocess is canceled.
	* MIProcessAdapter.java

2006-03-27 Mikhail Khodjaiants
	Cleaned up the "Session" class constructors.
	* Session.java
 
2006-03-27 Mikhail Khodjaiants
	Added the "getSessionConfiguration" method to allow clients to provide their own session configurations.
	* AbstractGDBCDIDebugger.java

2006-03-23 Mikhail Khodjaiants
	Pass ILaunch instead of ILaunchConfiguration.
	Added "getGDBPath" method.
	* AbstractGDBCDIDebugger.java
	* CygwinGDBCDIDebugger2.java
	* GDBCDIDebugger2.java
	* GDBServerCDIDebugger2.java

2006-03-23 Mikhail Khodjaiants
	Added default attribute value for ATTR_DEBUG_NAME.
	* IMILaunchConfigurationConstants.java

2006-03-21 Mikhail Khodjaiants
	Missing error message.
	* MIPluginResources.properties

2006-03-20 Mikhail Khodjaiants
	Made "getCommandFile" and "getWorkingDirectory" methods protected.
	* GDBCDIDebugger2.java
	
2006-03-16 Mikhail Khodjaiants
	ILaunch is added to the arguments list of "doStartSession".
	* AbstractGDBCDIDebugger.java
	* CygwinGDBCDIDebugger2.java
	* GDBCDIDebugger2.java
 
2006-03-13 Mikhail Khodjaiants
	Added default implementation for "getExtraArguments". No need to force 
	clients to implement this method.
	* AbstractGDBCDIDebugger.java

2006-02-09 Mikhail Khodjaiants
	Bug 114793: Add an extension point to contribute command factories.
	Registered windows and linux specific command factories for gdbserver.
	* plugin.properties
	* plugin.xml

2006-02-09 Mikhail Khodjaiants
	The inferior is in the suspended state when connecting to gsbserver.
	* GDBServerCDIDebugger2.java

2006-02-08 Mikhail Khodjaiants
	Bug 114793: Add an extension point to contribute command factories.
	Added standard command factory for gdb server.
	* plugin.xml
	* plugin.properties
	
2006-02-07 Mikhail Khodjaiants
	Bug 114793: Add an extension point to contribute command factories.